fixed carousel side gap margin

--- a/src/components/MobileCarousel/MobileCarousel.css
+++ b/src/components/MobileCarousel/MobileCarousel.css
@@ -22,11 +22,11 @@
 @media screen and (min-width:610px){
     .mobile-carousel .splide__slide{
        
-        max-width: 60%;
+        max-width: 50%;
       
     }
     .mobile-carousel{
-        margin: 40px -40px;
+
         width: 100vw;
         
     }
